# llm.c

./: CMakeLists.txt  README.md  train_gpt2.cpp  train_gpt2.cu
benches/: CMakeLists.txt
